# nordpool-predict-fi-hacs

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
custom_components/nordpool_predict_fi/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py
custom_components/nordpool_predict_fi/translations/: en.json  fi.json  sv.json
docs/: README.md  automation_cheapest_6h.yaml  lovelace.md  npf_card_cheapest_countdown.yaml  npf_card_daily_averages.yaml  npf_card_daily_averages_button-card.yaml  npf_card_daily_averages_md.yaml  npf_card_narration_en.yaml  npf_card_narration_fi.yaml  npf_card_price.yaml  npf_card_summary_en.yaml  npf_card_summary_fi.yaml  npf_card_summary_table_en.yaml  npf_card_summary_table_fi.yaml  npf_card_wind.yaml
scripts/: dev_fetch.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_migration.py  test_number.py  test_sensor.py
