[project]
name = "nordpool-predict-fi-hacs"
version = "2025.10.19.7"
description = "Home Assistant integration for Nordpool FI price predictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "pytest-sugar>=1.1.1",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
